--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
 </head>
 <body>
     <main>
+
+        <div class="background">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+         </div>
+
         <!-- Caixa de cadastro -->
         <div class="caixa-cadastro">
 
@@ -48,7 +72,8 @@
                             name="senha"
                             required
                             placeholder="Sua Senha"
-                            class="padrao">
+                            class="padrao"
+                            minlength="8">
                         </label>
                     </div>
 
