--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/fundo.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/gradiente-hover.css">
     <title>Cadastro</title>
 </head>
 <body>
