--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-
+        <!-- Area pro fundo animado -->
         <div class="background">
             <span></span>
             <span></span>
@@ -33,6 +33,8 @@
             <span></span>
             <span></span>
          </div>
+         <!-- Final do fundo animado -->
+
 
         <!-- Caixa de cadastro -->
         <div class="caixa-cadastro">
