--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <div class="titulo">
             <!-- Titulo cadastro -->
-            <h1 id="titulo-principal">Login</h1>
+            <h1 id="titulo-principal">LOGIN</h1>
             </div>
 
             <!-- Formulario -->
